# ufk

./: .travis.yml  README.md  ufk.code-workspace
client/: README.md  ufk_client.sublime-project
client/Assets/: TestProtoclBuffer.cs  UIConfig.json  test.unity
client/Assets/ArtRes/Atlas/: EnvironmentAtlas.spriteatlas
client/Assets/ArtRes/Palettes/: Wall.prefab
client/Assets/ArtRes/Tiles/EnvironmentTiles/: Circle.asset  Square.asset
client/Assets/Lua/Common/: Sequence.lua
client/Assets/Proto/Net/: AcountLoginRequest.cs  CarListMessage.cs  HeartRequest.cs  Hellow.cs  Person.cs  TestNet.cs
client/Assets/Proto/Table/: TestTable.cs
client/Assets/Sample/DebugHelper/: DebugHelperTest.cs  DebugHelperTest.unity
client/Assets/Scenes/: barn.unity
client/Assets/Scripts/: App.cs  AppConfig.cs  Logger.cs
client/Assets/Scripts/Common/: DebugHandler.cs  DebugWriter.cs  ObjectPool.cs  Singleton.cs
client/Assets/Scripts/Common/DebugLib/: DebugLib.asmdef  DebugUtils.cs  DebugUtilsTest.unity  DebugWriter.cs
client/Assets/Scripts/Common/DebugLib/Sample/: DebugUtilsTest.cs
client/Assets/Scripts/Input/: CharactorControl.cs
client/Assets/Scripts/NetWork/: HallConnection.cs  NetPacket.cs  TcpConnection.cs
client/Assets/Scripts/ResMgr/: ResMgr.cs
client/Assets/Scripts/UI/: README.md
client/Assets/Scripts/UI/Sample/Scene/: Sample.unity
client/Assets/Scripts/UI/Scripts/: Empty4Raycast.cs  UButton.cs  UFontData.cs  UIConfig.cs  UIEmpty4Raycast.cs  UIImage.cs  UImage.cs  UText.cs
client/Assets/Scripts/UI/Scripts/Editor/: UFontDataDrawer.cs  UIImageEditor.cs  UImageEditor.cs  UTextEditor.cs
client/Assets/SyncTransfrom/Material/: BallMat.physicsMaterial2D
client/Assets/SyncTransfrom/Scene/: Demo1.unity
client/Assets/SyncTransfrom/Scripts/: Defines.cs  Demo1.cs  NetPkg.cs  SyncObject.cs  SyncTransUtils.cs
client/Assets/TestCase/LoadGameViewSize/: LoadGameViewSize.cs  LoadGameViewSize.unity
client/Assets/TestCase/Net/: TestNetPacket.cs
client/Assets/TestCase/ProtocolBuffer/: TestProtoclBuffer.cs
client/ProjectSettings/: ProjectSettings.asset
client/Proto/: pb2cs.bat
client/Proto/Net/: TestNet.proto
client/Proto/Table/: TestTable.proto
client/tools/ProtoGen/: sdf.cs
common/: log.lua  randutils.lua  requirecfg.lua  timeutils.lua
server/3rd/: build_all.sh
server/3rd/LuaJIT-2.0.5/src/: luajit
server/3rd/LuaJIT-2.0.5/src/host/: buildvm  minilua
server/engine/: .ycm_extra_conf.py  CMakeLists.txt  build.sh  run.sh
server/engine/Application/: Application.cpp  CMakeLists.txt
server/engine/application/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
server/engine/common/: CMakeLists.txt  Defines.h  Timer.cpp  Timer.h
server/engine/deploy/test/: testNetPacket
server/engine/deploy/test/TestNetPacket/: testNetPacket
server/engine/network/: CMakeLists.txt  NetPacket.cpp  NetPacket.h  NetWork.cpp  NetWork.h  Session.cpp  Session.h  TcpConnection.cpp  TcpConnection.h
server/engine/pb/: CMakeLists.txt  Hellow.pb.cc  Person.pb.cc  Person.pb.h
server/engine/test/: CMakeLists.txt
server/engine/test/TestNetPacket/: .main.cpp.swp  CMakeLists.txt  main.cpp
server/engine/test/test_luajit/: CMakeLists.txt  build.sh  test_luajit.cpp
server/engine/test/test_raknet/: CMakeLists.txt  client.cpp  defines.h  server.cpp
server/logic/Scripts/common/: basedata.lua  zset.lua
server/proto/: copycpp.sh  pb2cpp.sh
server/proto/cpp/: Hellow.pb.h
server/proto/pb/: Hellow.proto  Person.proto
