cmake_minimum_required(VERSION 2.6)

PROJECT(pb)

SET(UFK_ROOT ${PROJECT_SOURCE_DIR}/..)

FILE(GLOB_RECURSE SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.c ${PROJECT_SOURCE_DIR}/*.cc)

INCLUDE_DIRECTORIES(${UFK_ROOT}/3rdParty/include)
LINK_DIRECTORIES(${PROJ_ROOT}/3rdParty/lib)

ADD_LIBRARY(pb STATIC ${SRC})

TARGET_LINK_LIBRARIES(pb protobuf)

