cmake_minimum_required(VERSION 2.6)

SET(PROJ_NAME test_luajit)

PROJECT(${PROJ_NAME})

SET(PROJ_ROOT ${PROJECT_SOURCE_DIR}/../..)

FILE(GLOB SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.c)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-fPIC -std=c++11 -g -w -pthread")

INCLUDE_DIRECTORIES(${PROJ_ROOT})
INCLUDE_DIRECTORIES(${PROJ_ROOT}/3rdParty/include)
LINK_DIRECTORIES(${PROJ_ROOT}/3rdParty/lib)

ADD_EXECUTABLE(${PROJ_NAME} ${SRC})
TARGET_LINK_LIBRARIES(${PROJ_NAME} luajit dl)